src/app/features/dashboard/offers/offers-blue/offers-statistics/offers-statistics.component.scss
@import "../../../../../../styles/theme/colors.scss";

:host {
  display: flex;
  flex-direction: column;
  //justify-content: space-between;
  height: 100%;
  background: #112639;
  border-radius: 15px;
}

p {
  color: "#fffffff" !important;
}

.wrapper {
  height: 100%;

  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  div {

  }
}
rect {
  rx: 0 !important;
}
h3 {

  @media (min-width: 600px) {
    position: absolute;
    z-index: 999;
  }
  color: white;
 
  padding: 20px;
 
}

.both-graph-container {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: space-between;
}
.chart {
  //margin-top: -70px;
  pointer-events: none;
  z-index: 1;
}
.chart-hidden {
  position: relative;
  height: 0px;
  z-index: -10;
}


.bottomBox {
  border-radius: 0 0 15px 15px;
  padding: 10px;
  background: #6C7580;
}

.segmentText {
  color: white;
  text-align: left;
  font-size: 14px;
  margin-bottom: 5px;
}

.small {
  text-align: left;
  color: white;
}

.details {
  .mat-expansion-panel{
  background: unset;
  border-radius: 0 0 15px 15px;

  }

  ::ng-deep .mat-expansion-panel-body {
    padding: 0;
  }

  ::ng-deep .mat-content {
    display: none;
  }

  ::ng-deep .mat-expansion-indicator {
    margin: auto
  }
  ::ng-deep .mat-expansion-panel-header:hover {
    background: $secondary !important;
  }
  ::ng-deep .mat-expansion-panel-header {
    background: $secondary !important;
  }
}

.mat-tab-group{
  @media (min-width: 600px) {
    position: absolute;
  margin-top: 15px;
  width: 100%;
  color: white;
  }
  

} 


/* ::ng-deep {
  color: white;
  opacity: 1;
}
 */


 .both-graph-container {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: space-between;

  ::ng-deep.mat-tab-label {
    color: $primary;
    opacity: 1;
  }
  
  ::ng-deep .mat-tab-list .mat-tab-labels .mat-tab-label  {
    color:white !important;
    opacity: 1;
    border-radius: 0 5px 5px 0;
  }

  ::ng-deep .mat-tab-list .mat-tab-labels .mat-tab-label-active {
    color: $primary !important;
    opacity: 1;
    border-radius: 0 5px 5px 0;
  }
}

::ng-deep .highcharts-credits {
  display: none !important;
}

